// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SwitchComponent /> Should be able to render a active switch 1`] = `
<div
  class="sc-bdfBQB rvVuK"
  data-testid="switch-button"
>
  <div
    class="sc-gsTEea kFvFwm"
    data-testid="switch-button-aura"
  >
    <div
      class="sc-dlfnuX kFkJSD"
    />
  </div>
</div>
`;

exports[`<SwitchComponent /> Should be able to render a not active switch 1`] = `
<div
  class="sc-bdfBQB bZRwow"
  data-testid="switch-button"
>
  <div
    class="sc-gsTEea dNaYiJ"
    data-testid="switch-button-aura"
  >
    <div
      class="sc-dlfnuX jzfzSw"
    />
  </div>
</div>
`;

exports[`<SwitchComponent /> Should be able to render disabled switch 1`] = `
<div
  class="sc-bdfBQB gaPvPz"
  data-testid="switch-button"
  disabled=""
>
  <div
    class="sc-gsTEea iVovoG"
    data-testid="switch-button-aura"
    disabled=""
  >
    <div
      class="sc-dlfnuX djftuf"
      disabled=""
    />
  </div>
</div>
`;

exports[`<SwitchComponent /> Should be able to render the switch buttom with pressed Down and show aura 1`] = `
<div
  class="sc-gsTEea cnBcBh"
  data-testid="switch-button-aura"
>
  <div
    class="sc-dlfnuX jzfzSw"
  />
</div>
`;

exports[`<SwitchComponent /> Should be able to render the switch buttom with pressed Up and show aura 1`] = `
<div
  class="sc-gsTEea igqAUp"
  data-testid="switch-button-aura"
>
  <div
    class="sc-dlfnuX jzfzSw"
  />
</div>
`;
